--- a/index.html
+++ b/index.html
@@ -276,7 +276,23 @@ listItem.innerHTML = `
         } catch (error) {
             console.error('Error fetching live train services:', error);
         }
-    } 
+    }
+
+    function updateTextBoxPosition() {
+        var imageLeft = document.querySelector('.background').offsetLeft;
+        document.querySelector('.text-box').style.left = (imageLeft + 60) + 'px';
+    }
+
+    // Function to format departure time
+    function formatDepartureTime(timeString) {
+        return timeString.slice(11, 16);
+    }
+
+    // Fetch and display live train services initially and then every minute
+    window.onload = function() {
+        fetchAndDisplayLiveTrainServices();
+        setInterval(fetchAndDisplayLiveTrainServices, 15000); // Update every minute (60,000 milliseconds)
+    };
 </script>
 
 </body>
