--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         /* Font imports */
         @font-face {
             font-family: 'AvertaBold';
-            src: url('https://raw.githubusercontent.com/MichaelH12345/fonts/main/AvertaBold-_1_.ttf') format('truetype');
+            src: url('https://raw.githubusercontent.com/MichaelH12345/Avanti_Departures/main/AvertaBold.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
         @font-face {
             font-family: 'Averta';
-            src: url('https://raw.githubusercontent.com/MichaelH12345/fonts/main/Averta-_1_.ttf') format('truetype');
+            src: url('https://raw.githubusercontent.com/MichaelH12345/Avanti_Departures/main/Averta.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -25,7 +25,7 @@
         }
         @font-face {
             font-family: 'Operator Font';
-            src: url('https://raw.githubusercontent.com/MichaelH12345/fonts/main/averta_bigfontsite.com.otf') format('opentype');
+            src: url('https://raw.githubusercontent.com/MichaelH12345/Avanti_Departures/main/Averta.ttf') format('opentype');
             font-weight: normal;
             font-style: normal;
         }
@@ -33,26 +33,27 @@
         /* Clock styles */
         .clock {
             position: absolute;
-            bottom: 0px; /* 3 pixels from the bottom */
-            right: 40px; /* 35 pixels from the right */
+            bottom: -0.5px; /* 3 pixels from the bottom */
+            right: 35px; /* 35 pixels from the right */
             font-family: 'AvertaBold', sans-serif;
             font-size: 80px;
             color: white;
-            z-index: 2; /* Ensure the clock appears above other elements */
+            z-index: 5; /* Ensure the clock appears above other elements */
         }
 
-        /* Text box styles */
-        .text-box {
-            position: fixed;
-            bottom: 7.5px; /* 10 pixels from the bottom */
-            left: 40px; /* 35 pixels from the very left */
-            font-family: 'AvertaBold', sans-serif; /* Specify the font */
-            font-size: 80px; /* Text size */
-            color: white;
-            background-color: #141d2c; /* Background color */
-            padding: 10px; /* Add padding */
-            text-align: right; /* Align text to the left */
-        }
+/* Text box for Departures */
+.text-box {
+    position: absolute;
+    left: 90px; /* Start 60 pixels from the very left */
+    top: 5px; /* 5 pixels from the very top */
+    font-family: 'AvertaBold', sans-serif; /* Specify the font */
+    font-size: 70px; /* Text size */
+    color: white;
+    height: auto; /* Set height to auto initially */
+}
+
+
+        
 
         /* Box styles */
         .box {
@@ -60,10 +61,21 @@
             bottom: 0; /* Start from the very bottom */
             right: 20; /* Start from the very right */
             height: 95px;
-            width: 340px;
+            width: 350px;
             background-color: #141d2c; /* Background color */
+            z-index: 4; /* Ensure the clock appears above other elements */
         }
 
+/* Red box styles */
+.red-box {
+    position: absolute;
+    bottom: 0; /* Start from the very bottom */
+    right: 0; /* Start from the very right */
+    height: 95px;
+    width: 50px; /* Set width to 50 pixels */
+    background-color: #FF4713; /* Red background color */
+    z-index: 4; /* Ensure the box appears above other elements */
+}
 
         /* Body styles */
         body, html {
@@ -132,15 +144,14 @@
             padding: 0;
             margin: 0;
         }
-        .live-train-services li {
-            margin-bottom: 10px; /* Increased margin bottom */
-            padding-bottom: 70px;
-            border-bottom: 3px solid white;
-            display: flex; /* Use flexbox */
-            justify-content: 0px; /* Align items to the start */
-            align-items: center; /* Align items vertically */
-            flex-wrap: wrap; /* Allow wrapping */
-        }
+.live-train-services li {
+    margin-bottom: 10px; /* Increased margin bottom */
+    padding-bottom: 70px;
+    border-bottom: 3px solid white;
+    display: flex; /* Use flexbox */
+    left: 0; /* Start from the very left */
+}
+
         .live-train-services li div {
             flex: 1; /* Distribute equal space */
         }
@@ -171,16 +182,36 @@
             color: white;
         }
 
-   .live-train-services li .operator {
-            position: relative;
-            text-align: left;
-            right: 450px;/* Adjust left position for positioning */
-            top: 60px; /* Move down by 50px */
-            width: calc(100% - 170px); /* Decrease width of container */
-            white-space: nowrap;
-            overflow: hidden;
-            font-family: 'Thin Averta', sans-serif; /* Change font to Thin Averta */
-        }
+.live-train-services li .operator {
+    position: relative;
+    text-align: left;
+    right: 455px;
+    top: 60px; /* Move down by 50px */
+    white-space: nowrap;
+    overflow: show; /* Display overflowing content */
+    font-family: 'Thin Averta', sans-serif; /* Change font to Thin Averta */
+}
+
+
+.nrccMessage {
+    position: absolute;
+    left: 0; /* Start from the very left */
+    bottom: 5; /* Align with the bottom of the iframe */
+    font-family: 'Averta', sans-serif; /* Specify the font */
+    color: white;
+    height: 95px; /* Set height to 95 pixels */
+    width: auto; /* Allow text box width to adjust based on content */
+    font-size: 75px; /* Set the font size */
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflow content */
+    animation: scrollText 20s linear infinite; /* Define animation */
+    z-index: 1; /* Bring the text box to the front */
+}
+
+@keyframes scrollText {
+    0% { transform: translateX(100%); } /* Start off screen to the right */
+    100% { transform: translateX(-100%); } /* Scroll to off screen to the left */
+}
 
 
         /* Orange box */
@@ -211,11 +242,27 @@
             opacity: 0;
             pointer-events: none;
         }
+
+        /* Image styles */
+        .logo {
+            position: absolute;
+            left: 35px; /* 35 pixels from the very left */
+            top: 17.5px; /* 10 pixels from the very top */
+            height: 65px; /* Set height to 50 pixels */
+        }
     </style>
 </head>
 <body>
+
+    <div class="red-box"></div>
+
+
     <!-- Text boxes -->
     <div class="text-box">Departures</div>
+    
+<div class="nrccMessage" style="left: 0;">If you see something that doesn't look right, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.</div>
+
+
     <div class="time">
         <div>Time</div>
         <div style="padding-left: 35px;">Destination</div>
@@ -239,123 +286,145 @@
     <!-- Clock -->
     <div class="clock">00:00:00</div>
 
+
     <!-- Box -->
     <div class="box"></div>
 
+
+    <div class="text-box">Departures</div>
+
+     <!-- Image -->
+    <img class="logo" src="https://github.com/MichaelH12345/fonts/raw/main/download%20(1).png" alt="Logo">
+
+
 <!-- Station selection -->
 <div class="station-selection" id="stationSelection">
-    <label for="station" style="font-family: 'Averta', sans-serif; font-size: 40px;">Enter Station:</label>
-    <input type="text" id="station" name="station" style="font-family: 'Averta', sans-serif; font-size: 30px;" placeholder="Enter station name...">
-    <button onclick="fetchLiveTrainServices()" style="font-family: 'Averta', sans-serif; font-size: 30px;">Fetch</button>
+    <label for="station" style="font-family: 'Averta', sans-serif; font-size: 75px; color:#141d2c;">Choose a UK Station:</label>
+    <input type="text" id="station" name="station" style="font-family: 'Averta', sans-serif; font-size: 60px; color:#141d2c;" placeholder="Enter station name...">
+    <button onclick="fetchLiveTrainServices()" style="font-family: 'Averta', sans-serif; font-size: 60px; color:#141d2c;">Enter</button>
 </div>
 
-    <script>
-        async function fetchAndDisplayLiveTrainServices(station) {
-            try {
-                const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
-                const data = await response.json();
-                const trainServices = data.trainServices;
 
-                const liveTrainList = document.getElementById('liveTrainList');
-                liveTrainList.innerHTML = ''; // Clear existing data
+<script>
+    async function fetchAndDisplayLiveTrainServices(station) {
+        try {
+            const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
+            const data = await response.json();
+            const trainServices = data.trainServices;
 
-                if (trainServices.length === 0) {
-                    // If no live train services available
-                    liveTrainList.innerHTML = "<li>No live train services available.</li>";
-                } else {
-                    // Generate and append live train service list items
-                    trainServices.forEach(service => {
-                        const listItem = document.createElement('li');
-                        const destination = service.destination[0].locationName;
-                        const platform = service.platform || '-';
-                        const operator = service.operator ? service.operator : '-';
+            const liveTrainList = document.getElementById('liveTrainList');
+            liveTrainList.innerHTML = ''; // Clear existing data
 
-                        // Extracting time from std and etd fields
-                        const std = service.std ? formatDepartureTime(service.std) : '-';
-                        const atd = service.atd ? formatDepartureTime(service.atd) : '-';
-                        const etd = service.etd ? formatDepartureTime(service.etd) : '-';
-
-                        // Determine status based on cancellation status and ATD vs STD
-                        let status;
-                        let color; // Variable to store text color
-                        let reason = ''; // Variable to store delay reason
-                        if (service.isCancelled) {
-                            status = 'Cancelled';
-                            color = '#FF4713'; // Set text color to orange for Cancelled status
-                        } else if (etd === '00:00') {
-                            status = 'Delayed';
-                            color = 'white'; // Set text color to white for Delayed status
-                            reason = getDelayReason(service.delayReason);
-                        } else if (std === etd) {
-                            status = 'On Time';
-                            color = 'white'; // Set text color to white for On Time status
-                        } else {
-                            status = etd;
-                            color = 'white'; // Set text color to white for other statuses
-                        }
-
-                        // Update the clock every second
-                        function updateClock() {
-                            const now = new Date();
-                            const hours = String(now.getHours()).padStart(2, '0');
-                            const minutes = String(now.getMinutes()).padStart(2, '0');
-                            const seconds = String(now.getSeconds()).padStart(2, '0');
-                            const timeString = `${hours}:${minutes}:${seconds}`;
-                            document.querySelector('.clock').textContent = timeString;
-                        }
-
-                        // Initial call to update the clock
-                        updateClock();
-
-                        // Set interval to update the clock every second
-                        setInterval(updateClock, 1000);
-
-                        listItem.innerHTML = `
-                            <div>${std}</div>
-                            <div class="destination">${destination}</div>
-                            <div class="platform">${platform}</div>
-                            <div class="status" style="color: ${color};">${status}</div>
-                            <div class="operator">${operator}</div>
-                            <div class="reason">${reason}</div>
-                        `;
-
-                        liveTrainList.appendChild(listItem);
-                    });
-                }
-            } catch (error) {
-                console.error('Error fetching live train services:', error);
-            }
-        }
-
-        // Function to format departure time
-        function formatDepartureTime(timeString) {
-            return timeString.slice(11, 16);
-        }
-
-        // Function to get delay reason
-        function getDelayReason(reasonCode) {
-            // Replace with actual logic to get delay reason from provided JSON file
-            // For now, return an empty string
-            return '';
-        }
-
-        // Function to fetch live train services based on user input
-        function fetchLiveTrainServices() {
-            const stationInput = document.getElementById('station').value;
-            if (stationInput) {
-                fetchAndDisplayLiveTrainServices(stationInput);
-                setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 60000); // Update every minute (60,000 milliseconds)
-                document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
+            if (trainServices.length === 0) {
+                // If no live train services available
+                liveTrainList.innerHTML = "<li>No live train services available.</li>";
             } else {
-                console.error('Please select a station.');
-            }
-        }
+                // Generate and append live train service list items
+                trainServices.forEach(service => {
+                    const listItem = document.createElement('li');
+                    const destination = service.destination[0].locationName;
+                    const platform = service.platform || '-';
+                    const operator = service.operator ? service.operator : '-';
 
-        // Fetch and display live train services initially and then every minute
-        window.onload = function() {
-            // Initially show station selection
-            document.getElementById('stationSelection').classList.remove('hide');
-        };
-    </script>
+                    // Extracting time from std and etd fields
+                    const std = service.std ? formatDepartureTime(service.std) : '-';
+                    const atd = service.atd ? formatDepartureTime(service.atd) : '-';
+                    const etd = service.etd ? formatDepartureTime(service.etd) : '-';
+
+                    // Determine status based on cancellation status and ATD vs STD
+                    let status;
+                    let color; // Variable to store text color
+                    let reason = ''; // Variable to store delay reason
+                    if (service.isCancelled) {
+                        status = 'Cancelled';
+                        color = '#FF4713'; // Set text color to orange for Cancelled status
+                    } else if (etd === '00:00') {
+                        status = 'Delayed';
+                        color = 'white'; // Set text color to white for Delayed status
+                        reason = getDelayReason(service.delayReason);
+                    } else if (std === etd) {
+                        status = 'On Time';
+                        color = 'white'; // Set text color to white for On Time status
+                    } else {
+                        status = etd;
+                        color = 'white'; // Set text color to white for other statuses
+                    }
+
+                    // Update the clock every second
+                    function updateClock() {
+                        const now = new Date();
+                        const hours = String(now.getHours()).padStart(2, '0');
+                        const minutes = String(now.getMinutes()).padStart(2, '0');
+                        const seconds = String(now.getSeconds()).padStart(2, '0');
+                        const timeString = `${hours}:${minutes}:${seconds}`;
+                        document.querySelector('.clock').textContent = timeString;
+                    }
+
+                    // Initial call to update the clock
+                    updateClock();
+
+                    // Set interval to update the clock every second
+                    setInterval(updateClock, 1000);
+
+                    listItem.innerHTML = `
+                        <div>${std}</div>
+                        <div class="destination">${destination}</div>
+                        <div class="platform">${platform}</div>
+                        <div class="status" style="color: ${color};">${status}</div>
+                        <div class="operator">${operator}</div>
+                        <div class="reason">${reason}</div>
+                    `;
+
+                    liveTrainList.appendChild(listItem);
+                });
+
+                // Show the station name once the user chooses a station
+                const stationNameBox = document.createElement('div');
+                stationNameBox.classList.add('text-box');
+                stationNameBox.style.left = '460px'; // Move it to the left by 10 pixels
+                stationNameBox.style.top = '35px'; // Maintain the top position
+                stationNameBox.style.fontFamily = 'Averta, sans-serif'; // Use Thin Averta font
+                stationNameBox.style.fontSize = '35px'; // Text size
+                stationNameBox.style.color = 'white'; // Text color
+                stationNameBox.style.height = 'auto'; // Set height to auto initially
+                stationNameBox.textContent = `(from ${data.locationName})`; // Station name in brackets
+                document.body.appendChild(stationNameBox);
+            }
+        } catch (error) {
+            console.error('Error fetching live train services:', error);
+        }
+    }
+
+    // Function to format departure time
+    function formatDepartureTime(timeString) {
+        return timeString.slice(11, 16);
+    }
+
+    // Function to get delay reason
+    function getDelayReason(reasonCode) {
+        // Replace with actual logic to get delay reason from provided JSON file
+        // For now, return an empty string
+        return '';
+    }
+
+    // Function to fetch live train services based on user input
+    function fetchLiveTrainServices() {
+        const stationInput = document.getElementById('station').value;
+        if (stationInput) {
+            fetchAndDisplayLiveTrainServices(stationInput);
+            setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 15000); // Update every minute (60,000 milliseconds)
+            document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
+        } else {
+            console.error('Please select a station.');
+        }
+    }
+
+    // Fetch and display live train services initially and then every minute
+    window.onload = function() {
+        // Initially show station selection
+        document.getElementById('stationSelection').classList.remove('hide');
+    };
+</script>
+
 </body>
 </html>
