--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     const nrccMessage = nrccMessages[0].xhtmlMessage;
                     nrccMessageContainer.innerHTML = nrccMessage;
                 } else {
-                    nrccMessageContainer.innerHTML = "See it - Say it - Sorted.";
+                    nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
                 }
 
 
