--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
             color: white;
         }
 
- .live-train-services li .operator {
+.live-train-services li .operator {
     position: relative;
     text-align: left;
-    left: 202.5px;
+    left: -757.5px; /* Start 25 pixels from the very left */
     top: 60px; /* Maintain the same position */
     white-space: nowrap;
     overflow: visible; /* Change overflow to visible */
@@ -195,25 +195,24 @@
     overflow: hidden;
 }
 
-        .nrccMessage {
-            position: absolute;
-            left: 0; /* Start from the very left */
-            bottom: -150; /* Align with the bottom of the iframe */
-            font-family: 'Averta', sans-serif; /* Specify the font */
-            color: white;
-            height: 250px; /* Set height to 95 pixels */
-            width: auto; /* Allow text box width to adjust based on content */
-            font-size: 75px; /* Set the font size */
-            white-space: nowrap; /* Prevent text from wrapping */
-            overflow: hidden; /* Hide overflow content */
-            animation: scrollText 20s linear infinite; /* Define animation */
-            z-index: 1; /* Bring the text box to the front */
-        }
+.nrccMessage {
+    position: absolute;
+    bottom: -150px; /* Align with the bottom of the iframe */
+    font-family: 'Averta', sans-serif; /* Specify the font */
+    color: white;
+    height: 250px; /* Set height to 250 pixels */
+    font-size: 75px; /* Set the font size */
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflow content */
+    width: auto; /* Set width to auto to adjust based on content */
+    animation: scrollText 20s linear infinite; /* Define animation */
+    z-index: 1; /* Bring the text box to the front */
+}
 
-        @keyframes scrollText {
-            0% { transform: translateX(100%); } /* Start off screen to the right */
-            100% { transform: translateX(-100%); } /* Scroll to off screen to the left */
-        }
+@keyframes scrollText {
+    0% { transform: translateX(35%); } /* Start off screen to the right */
+    100% { transform: translateX(-100%); } /* Scroll off screen to the left */
+}
 
         /* Orange box */
         .orange-box {
@@ -299,163 +298,197 @@
         <button onclick="fetchLiveTrainServices()" style="font-family: 'Averta', sans-serif; font-size: 60px; color:#141d2c;">Enter</button>
     </div>
 
-    <script>
-        async function fetchAndDisplayLiveTrainServices(station) {
-            try {
-                const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
-                const data = await response.json();
-                const trainServices = data.trainServices;
+<script>
+    async function fetchAndDisplayLiveTrainServices(station) {
+        try {
+            const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
+            const data = await response.json();
+            const trainServices = data.trainServices;
 
-                const liveTrainList = document.getElementById('liveTrainList');
-                liveTrainList.innerHTML = ''; // Clear existing data
+            const liveTrainList = document.getElementById('liveTrainList');
+            liveTrainList.innerHTML = ''; // Clear existing data
 
-                if (trainServices.length === 0) {
-                    // If no live train services available
-                    liveTrainList.innerHTML = "<li>No live train services available.</li>";
-                } else {
-                    // Generate and append live train service list items
-                    trainServices.forEach(service => {
-                        const listItem = document.createElement('li');
-                        const destination = service.destination[0].locationName;
-                        const platform = service.platform || '-';
-                        const operator = service.operator ? service.operator : '-';
-                        let reason = '';
+            if (trainServices.length === 0) {
+                // If no live train services available
+                liveTrainList.innerHTML = "<li>No live train services available.</li>";
+            } else {
+// Generate and append live train service list items
+await Promise.all(trainServices.map(async (service) => {
+    const listItem = document.createElement('li');
+    const destination = service.destination[0].locationName;
+    const platform = service.platform || '-';
+    const operator = service.operator ? service.operator : '-';
+    let reason = '';
 
- // Fetch nrccMessages data
-        const nrccMessages = data.nrccMessages;
-        const nrccMessage = document.querySelector('.nrccMessage');
+    // Fetch nrccMessages data
+    const nrccMessages = data.nrccMessages;
+    const nrccMessageContainer = document.querySelector('.nrccMessage');
 
-        
-  // Display NRCC message
-                const nrccMessageContainer = document.querySelector('.nrccMessage');
-                if (nrccMessages && nrccMessages.length > 0) {
-                    const nrccMessage = nrccMessages[0].xhtmlMessage;
-                    nrccMessageContainer.innerHTML = nrccMessage;
-                } else {
-                    nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
+    // Display NRCC message
+    if (nrccMessages && nrccMessages.length > 0) {
+        const nrccMessage = nrccMessages[0].xhtmlMessage;
+        nrccMessageContainer.innerHTML = nrccMessage;
+    } else {
+        nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
+    }
+
+    // Extracting time from std and etd fields
+    const std = service.std ? formatDepartureTime(service.std) : '-';
+    const atd = service.atd ? formatDepartureTime(service.atd) : '-';
+    const etd = service.etd ? formatDepartureTime(service.etd) : '-';
+
+   // Determine status based on cancellation status and ATD vs STD
+let status;
+let color; // Variable to store text color
+if (service.isCancelled) {
+    status = 'Cancelled';
+    color = '#FF4713'; // Set text color to orange for Cancelled status
+    reason = await getCancelReason(service.cancelReason); // Await the result of getCancelReason
+} else if (etd === '00:00') {
+    status = 'Delayed';
+    color = 'white'; // Set text color to white for Delayed status
+    reason = await getDelayReason(service.delayReason); // Await the result of getDelayReason
+} else if (std === etd || atd > std) {
+    status = 'On Time';
+    color = 'white'; // Set text color to white for On Time status
+} else {
+    status = etd;
+    color = 'white'; // Set text color to white for other statuses
+}
+
+    // Assign the reason to the operator text box
+    const operatorElement = document.createElement('div');
+    operatorElement.classList.add('operator');
+    operatorElement.textContent = reason ? reason : (operator === '-' ? 'Compensation may apply' : operator);
+
+    listItem.innerHTML = `
+        <div class="std">${std}</div>
+        <div class="destination">${destination}</div>
+        <div class="platform">${platform}</div>
+        <div class="status" style="color: ${color};">${status}</div>
+        <div class="reason">${operator === '-' ? reason : ''}</div>
+    `;
+
+    // Append the operator element to the list item
+    listItem.appendChild(operatorElement);
+
+    liveTrainList.appendChild(listItem);
+}));
+                // Show the station name once the user chooses a station, only if it's not already shown
+                const stationNameBox = document.getElementById('stationNameBox');
+                if (!stationNameBox) {
+                    const stationNameBox = document.createElement('div');
+                    stationNameBox.id = 'stationNameBox';
+                    stationNameBox.classList.add('text-box');
+                    stationNameBox.style.left = '460px'; // Move it to the left by 10 pixels
+                    stationNameBox.style.top = '35px'; // Maintain the top position
+                    stationNameBox.style.fontFamily = 'Averta, sans-serif'; // Use Thin Averta font
+                    stationNameBox.style.fontSize = '35px'; // Text size
+                    stationNameBox.style.color = 'white'; // Text color
+                    stationNameBox.style.height = 'auto'; // Set height to auto initially
+                    stationNameBox.textContent = `(from ${data.locationName})`; // Station name in brackets
+                    document.body.appendChild(stationNameBox);
                 }
-
-
-                        // Extracting time from std and etd fields
-                        const std = service.std ? formatDepartureTime(service.std) : '-';
-                        const atd = service.atd ? formatDepartureTime(service.atd) : '-';
-                        const etd = service.etd ? formatDepartureTime(service.etd) : '-';
-
-                        // Determine status based on cancellation status and ATD vs STD
-                        let status;
-                        let color; // Variable to store text color
-                        if (service.isCancelled) {
-                            status = 'Cancelled';
-                            color = '#FF4713'; // Set text color to orange for Cancelled status
-                            reason = getCancelReason(service.cancelReason);
-                        } else if (etd === '00:00') {
-                            status = 'Delayed';
-                            color = 'white'; // Set text color to white for Delayed status
-                            reason = getDelayReason(service.delayReason);
-                        } else if (std === etd) {
-                            status = 'On Time';
-                            color = 'white'; // Set text color to white for On Time status
-                        } else {
-                            status = etd;
-                            color = 'white'; // Set text color to white for other statuses
-                        }
-
-  // Update the clock every second
-                    function updateClock() {
-                        const now = new Date();
-                        const hours = String(now.getHours()).padStart(2, '0');
-                        const minutes = String(now.getMinutes()).padStart(2, '0');
-                        const seconds = String(now.getSeconds()).padStart(2, '0');
-                        const timeString = `${hours}:${minutes}:${seconds}`;
-                        document.querySelector('.clock').textContent = timeString;
-                    }
-
-                    // Initial call to update the clock
-                    updateClock();
-
-                    // Set interval to update the clock every second
-                    setInterval(updateClock, 1000);
-
-
-                        listItem.innerHTML = `
-                            <div class="std">${std}</div>
-                            <div class="destination">${destination}</div>
-                            <div class="platform">${platform}</div>
-                            <div class="status" style="color: ${color};">${status}</div>
-                            <div class="operator">${operator}</div>
-                            <div class="reason">${reason}</div>
-                        `;
-
-                        liveTrainList.appendChild(listItem);
-                    });
-
-                    // Show the station name once the user chooses a station, only if it's not already shown
-                    const stationNameBox = document.getElementById('stationNameBox');
-                    if (!stationNameBox) {
-                        const stationNameBox = document.createElement('div');
-                        stationNameBox.id = 'stationNameBox';
-                        stationNameBox.classList.add('text-box');
-                        stationNameBox.style.left = '460px'; // Move it to the left by 10 pixels
-                        stationNameBox.style.top = '35px'; // Maintain the top position
-                        stationNameBox.style.fontFamily = 'Averta, sans-serif'; // Use Thin Averta font
-                        stationNameBox.style.fontSize = '35px'; // Text size
-                        stationNameBox.style.color = 'white'; // Text color
-                        stationNameBox.style.height = 'auto'; // Set height to auto initially
-                        stationNameBox.textContent = `(from ${data.locationName})`; // Station name in brackets
-                        document.body.appendChild(stationNameBox);
-                    }
-                }
-            } catch (error) {
-                console.error('Error fetching live train services:', error);
             }
+        } catch (error) {
+            console.error('Error fetching live train services:', error);
         }
+    }
 
-        // Function to format departure time
-        function formatDepartureTime(timeString) {
-            return timeString.slice(11, 16);
-        }
-
+    // Function to format departure time
+    function formatDepartureTime(timeString) {
+        return timeString.slice(11, 16);
+    }
 async function getDelayReason(reasonCode) {
     try {
+        if (!reasonCode) {
+            console.error('Invalid delay reason code:', reasonCode);
+            return '';
+        }
+
         const response = await fetch('https://raw.githubusercontent.com/davwheat/raildotmatrix.co.uk/main/src/api/LatenessCodes.json');
+        if (!response.ok) {
+            throw new Error('Failed to fetch delay reasons');
+        }
         const reasons = await response.json();
-        return reasons[reasonCode] || ''; // Return the reason text corresponding to the reason code, or an empty string if not found
+        console.log('Delay Reasons:', reasons); // Log the reasons object
+
+        // Check if the reason code exists in the reasons object
+        const reasonText = reasons.hasOwnProperty(reasonCode) ? reasons[reasonCode] : '';
+        const modifiedReasonText = reasonText.replace('This train has been delayed because of', 'Due to');
+
+        console.log('Delay Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the modified delay reason to the console
+        return modifiedReasonText;
     } catch (error) {
         console.error('Error fetching delay reasons:', error);
         return '';
     }
 }
 
-async function getCancelReason(reasonCode) {
+
+async function getCancelReason(reasonObj) {
     try {
+        if (!reasonObj || typeof reasonObj !== 'object' || !('value' in reasonObj)) {
+            console.error('Invalid cancellation reason object:', reasonObj);
+            return '';
+        }
+
+        const reasonCode = reasonObj.value;
+
         const response = await fetch('https://raw.githubusercontent.com/davwheat/raildotmatrix.co.uk/main/src/api/CancellationCodes.json');
+        if (!response.ok) {
+            throw new Error('Failed to fetch cancellation reasons');
+        }
         const reasons = await response.json();
-        return reasons[reasonCode] || ''; // Return the reason text corresponding to the reason code, or an empty string if not found
+        console.log('Cancellation Reasons:', reasons); // Log the reasons object
+
+        // Check if the reason code exists in the reasons object
+        const reasonText = reasons.hasOwnProperty(reasonCode) ? reasons[reasonCode] : '';
+        const modifiedReasonText = reasonText.replace('This train has been cancelled because of', 'Due to');
+
+        console.log('Cancellation Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the cancellation reason to the console
+        return modifiedReasonText;
     } catch (error) {
         console.error('Error fetching cancellation reasons:', error);
         return '';
     }
 }
 
-// Function to fetch live train services based on user input
-async function fetchLiveTrainServices() {
-    const stationInput = document.getElementById('station').value;
-    if (stationInput) {
-        await fetchAndDisplayLiveTrainServices(stationInput);
-        setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 15000); // Update every 15 seconds
-        document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
-        updateClock(); // Start the clock
-    } else {
-        console.error('Please select a station.');
+    // Function to fetch live train services based on user input
+    async function fetchLiveTrainServices() {
+        const stationInput = document.getElementById('station').value;
+        if (stationInput) {
+            await fetchAndDisplayLiveTrainServices(stationInput);
+            setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 15000); // Update every 10 minutes
+            document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
+            updateClock(); // Start the clock
+        } else {
+            console.error('Please select a station.');
+        }
     }
-}
 
-        // Fetch and display live train services initially and then every minute
-        window.onload = function() {
-            // Initially show station selection
-            document.getElementById('stationSelection').classList.remove('hide');
-        };
-    </script>
+    // Update the clock every second
+    function updateClock() {
+        const now = new Date();
+        const hours = String(now.getHours()).padStart(2, '0');
+        const minutes = String(now.getMinutes()).padStart(2, '0');
+        const seconds = String(now.getSeconds()).padStart(2, '0');
+        const timeString = `${hours}:${minutes}:${seconds}`;
+        document.querySelector('.clock').textContent = timeString;
+    }
+
+    // Initial call to update the clock
+    updateClock();
+
+    // Set interval to update the clock every second
+    setInterval(updateClock, 1000);
+
+    // Fetch and display live train services initially and then every minute
+    window.onload = function() {
+        // Initially show station selection
+        document.getElementById('stationSelection').classList.remove('hide');
+    };
+</script>
 
 </body>
 </html>
